--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "chatapp": "file:..",
     "lucide-react": "^0.536.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
