--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "chatapp": "file:..",
+    "express": "^5.1.0",
     "lucide-react": "^0.536.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
