--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "chatapp": "file:..",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.536.0",
+    "path-to-regexp": "^6.2.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
